--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.xlf
@@ -55,6 +55,10 @@
           <source>https://visualcrypt.com</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target>
         </trans-unit>
+        <trans-unit id="Resx/msgDiscardChanges" translate="yes" xml:space="preserve">
+          <source>Discard Changes?</source>
+          <target state="new">Discard Changes?</target>
+        </trans-unit>
         <trans-unit id="Resx/uriSourceUrl" translate="yes" xml:space="preserve">
           <source>https://visualcrypt.com</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">https://visualcrypt.com</target>
