--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
@@ -57,7 +57,195 @@
         </trans-unit>
         <trans-unit id="Resx/msgDiscardChanges" translate="yes" xml:space="preserve">
           <source>Discard Changes?</source>
-          <target state="new">Discard Changes?</target>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verwerfen?</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgFileIsBinary" translate="yes" xml:space="preserve">
+          <source>This file is neither text nor VisualCrypt - display with Hex View?\r\n\r\nIf file is very large the editor may become less responsive.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Diese Datei ist weder Text noch VisualCrypt - Hex-Ansicht anzeigen? \r\n\r\nIf Editor möglicherweise weniger sehr groß ist.</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgFindRegExNoMatch" translate="yes" xml:space="preserve">
+          <source>No match for '{0}' could be found.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Keine Übereinstimmung für '{0}' gefunden.</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgNothingFoundSearchFromStart" translate="yes" xml:space="preserve">
+          <source>Nothing found - Search again from the top of the document?</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Nichts gefunden - Suche erneut vom Anfang des Dokuments?</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgReplaceOccucancesReplaced" translate="yes" xml:space="preserve">
+          <source>{0} occurrences were replaced.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} wurden ersetzt.</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_Set_Title" translate="yes" xml:space="preserve">
+          <source>Set Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort festlegen</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_linktext_PrintPassword" translate="yes" xml:space="preserve">
+          <source>Print Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort drucken</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_linktext_VisualCryptPasswords" translate="yes" xml:space="preserve">
+          <source>VisualCrypt Passwords</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">VisualCrypt Kennwörter</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_linktext_GeneratePassword" translate="yes" xml:space="preserve">
+          <source>Generate Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort erstellen</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_lbl_PasswordOrPhrase" translate="yes" xml:space="preserve">
+          <source>Password/-phrase:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort /-Satz:</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_msgXofYUnicodeChars" translate="yes" xml:space="preserve">
+          <source>{0} of {1} Unicode Characters</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} von {1} Unicode-Zeichen</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_text_ReadMoreAbout" translate="yes" xml:space="preserve">
+          <source>Read more about</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Weitere Informationen über</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_text_from256BitRD" translate="yes" xml:space="preserve">
+          <source>from 256 Bit Random Data</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Zufällige 256-Bit-Daten</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_msgUseEmptyPassword" translate="yes" xml:space="preserve">
+          <source>Use empty password?</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Leeres Kennwort verwenden?</target>
+        </trans-unit>
+        <trans-unit id="Resx/spd_msgPasswordEffectivelyEmpty" translate="yes" xml:space="preserve">
+          <source>The password is effectively empty - are you sure?</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Ist das Kennwort effektiv leer - sind Sie sicher?</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_Set_OK" translate="yes" xml:space="preserve">
+          <source>Set Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort festlegen</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndEncrypt_Title" translate="yes" xml:space="preserve">
+          <source>Set Password %%amp; Encrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">%%amp;Das Kennwort verschlüsseln</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndEncrypt_OK" translate="yes" xml:space="preserve">
+          <source>Encrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verschlüsseln</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndEncryptAndSave_Title" translate="yes" xml:space="preserve">
+          <source>Set Password, Encrypt and Save</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Legen Sie ein Kennwort verschlüsseln und speichern</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndEncryptAndSave_OK" translate="yes" xml:space="preserve">
+          <source>Encrypt and Save</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verschlüsseln und speichern</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndDecrypt_Title" translate="yes" xml:space="preserve">
+          <source>Set Password %%amp; Decrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort %%amp;entschlüsseln</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndDecrypt_OK" translate="yes" xml:space="preserve">
+          <source>Decrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Entschlüsseln</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndDecryptLoadedFile_Title" translate="yes" xml:space="preserve">
+          <source>Enter password to decrypt loaded file</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort zum Entschlüsseln der Datei</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_SetAndDecryptLoadedFile_OK" translate="yes" xml:space="preserve">
+          <source>Decrypt loaded file</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Geladene Datei entschlüsseln</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_CorrectPassword_Title" translate="yes" xml:space="preserve">
+          <source>The current password is not correct</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Das aktuelle Kennwort ist nicht korrekt</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_CorrectPassword_OK" translate="yes" xml:space="preserve">
+          <source>Change Password and decrypt</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Ändern und Entschlüsseln</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_Change_Title" translate="yes" xml:space="preserve">
+          <source>Change Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort ändern</target>
+        </trans-unit>
+        <trans-unit id="Resx/spdm_Change_OK" translate="yes" xml:space="preserve">
+          <source>Change Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort ändern</target>
+        </trans-unit>
+        <trans-unit id="Resx/termBinary" translate="yes" xml:space="preserve">
+          <source>Binary File</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Binärdatei</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgReplaceInvalidRegEx" translate="yes" xml:space="preserve">
+          <source>Invalid Regular Expression Syntax</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Ungültiger regulärer Ausdruck-Syntax</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgFindCouldNotBeFound" translate="yes" xml:space="preserve">
+          <source>'{0}' could not be found.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0}' wurde nicht gefunden.</target>
+        </trans-unit>
+        <trans-unit id="Resx/termChangePassword" translate="yes" xml:space="preserve">
+          <source>Change Password</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort ändern</target>
+        </trans-unit>
+        <trans-unit id="Resx/termClear" translate="yes" xml:space="preserve">
+          <source>Clear</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Löschen</target>
+        </trans-unit>
+        <trans-unit id="Resx/termReplaceAll" translate="yes" xml:space="preserve">
+          <source>Replace All</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Alle ersetzen</target>
+        </trans-unit>
+        <trans-unit id="Resx/titleExportCleartext" translate="yes" xml:space="preserve">
+          <source>Export Clear Text (Encoding: {0})</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Exportieren von Klartext (Codierung: {0})</target>
+        </trans-unit>
+        <trans-unit id="Resx/titleImportWithEncoding" translate="yes" xml:space="preserve">
+          <source>Import with encoding: {0}</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Import mit Codierung: {0}</target>
+        </trans-unit>
+        <trans-unit id="Resx/termDefaults" translate="yes" xml:space="preserve">
+          <source>Defaults</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Standardeinstellungen</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
+          <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Die Einstellung wirkt sich auf die rechnerische arbeiten BCrypt-Hash zu erstellen. Ein hoher Wert bedeutet mehr Arbeit.</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_warn_low" translate="yes" xml:space="preserve">
+          <source>Warning: A low value faciliates brute force and dictionary attacks.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Warnung: Eine geringwertige ausfallsichere Brute-Force- und Wörterbuchangriffe Angriffe.</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_warn_high" translate="yes" xml:space="preserve">
+          <source>Warning: A high value will turn encryption and decryption into a very time consuming operation.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Warnung: Wert wird Ver- und Entschlüsselung sehr zeitaufwändig Betrieb aktiviert.</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_text_ReadThe" translate="yes" xml:space="preserve">
+          <source>Read the</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Lesen Sie die</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_text_orViewThe" translate="yes" xml:space="preserve">
+          <source>or view the</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">oder die</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_text_default_2_power" translate="yes" xml:space="preserve">
+          <source>Default: 2</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Standard: 2</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_text_EncrpytionMethod" translate="yes" xml:space="preserve">
+          <source>Encryption Method</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verschlüsselung</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_text_BCryptAESRounds" translate="yes" xml:space="preserve">
+          <source>BCrypt/AES Rounds:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">BCrypt-AES runden:</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_linktext_Spec" translate="yes" xml:space="preserve">
+          <source>Spec</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Spezifikationen</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_linktext_Source" translate="yes" xml:space="preserve">
+          <source>source code</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Quellcode</target>
+        </trans-unit>
+        <trans-unit id="Resx/sett_combo_VisualCrypt2" translate="yes" xml:space="preserve">
+          <source>VisualCrypt 2 (AES 256 Bit, BCrypt - Multi)</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">VisualCrypt 2 (AES 256 Bit BCrypt - Multi)</target>
         </trans-unit>
         <trans-unit id="Resx/uriSourceUrl" translate="yes" xml:space="preserve">
           <source>https://visualcrypt.com</source>
@@ -85,8 +273,9 @@
         </trans-unit>
         <trans-unit id="Resx/termEncrypt" translate="yes" xml:space="preserve">
           <source>Encrypt!</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verschlüsseln</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verschlüsseln</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          </trans-unit>
         <trans-unit id="Resx/termDecrypt" translate="yes" xml:space="preserve">
           <source>Decrypt</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Entschlüsseln</target>
