--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.resx
@@ -120,4 +120,364 @@
   <data name="Hello_World" xml:space="preserve">
     <value>Привет, мир!</value>
   </data>
+  <data name="constUntitledDotVisualCrypt" xml:space="preserve">
+    <value>Untitled.visualcrypt</value>
+  </data>
+  <data name="encrpytedStatusbarText" xml:space="preserve">
+    <value>VisualCrypt {0}, AES 256 бит 2 ^ циклов {1}, {2} Ch.</value>
+  </data>
+  <data name="encProgr_ProcessingKey" xml:space="preserve">
+    <value>Ключ обработки...</value>
+  </data>
+  <data name="encProgr_EncryptingRandomKey" xml:space="preserve">
+    <value>Случайный ключ шифрования...</value>
+  </data>
+  <data name="encProgr_EncryptingMessage" xml:space="preserve">
+    <value>Шифрование сообщения...</value>
+  </data>
+  <data name="encProgr_EncryptingMAC" xml:space="preserve">
+    <value>Шифрование Макинтош...</value>
+  </data>
+  <data name="encProgr_DecryptingRandomKey" xml:space="preserve">
+    <value>Расшифровка случайный ключ...</value>
+  </data>
+  <data name="encProgr_DecryptingMessage" xml:space="preserve">
+    <value>При расшифровке сообщения...</value>
+  </data>
+  <data name="encProgr_DecryptingMAC" xml:space="preserve">
+    <value>Расшифровка Макинтош...</value>
+  </data>
+  <data name="encProgr_CalculatingMAC" xml:space="preserve">
+    <value>Расчет Макинтош...</value>
+  </data>
+  <data name="uriSpecUrl" xml:space="preserve">
+    <value>https://visualcrypt.com</value>
+  </data>
+  <data name="msgDiscardChanges" xml:space="preserve">
+    <value>Отменить изменения?</value>
+  </data>
+  <data name="msgFileIsBinary" xml:space="preserve">
+    <value>Этот файл не является ни текста, ни VisualCrypt - отображать с помощью шестнадцатеричного представления? \r\n\r\nIf файл имеет большой размер, редактор может стать меньше реагировать.</value>
+  </data>
+  <data name="msgFindRegExNoMatch" xml:space="preserve">
+    <value>Не удается найти соответствие для «{0}».</value>
+  </data>
+  <data name="msgNothingFoundSearchFromStart" xml:space="preserve">
+    <value>Ничего не найдено - поиск снова в верхней части документа?</value>
+  </data>
+  <data name="msgReplaceOccucancesReplaced" xml:space="preserve">
+    <value>были заменены вхождения {0}.</value>
+  </data>
+  <data name="spdm_Set_Title" xml:space="preserve">
+    <value>Установка пароля</value>
+  </data>
+  <data name="spd_linktext_PrintPassword" xml:space="preserve">
+    <value>Напечатать пароль</value>
+  </data>
+  <data name="spd_linktext_VisualCryptPasswords" xml:space="preserve">
+    <value>VisualCrypt паролей</value>
+  </data>
+  <data name="spd_linktext_GeneratePassword" xml:space="preserve">
+    <value>Создать пароль</value>
+  </data>
+  <data name="spd_lbl_PasswordOrPhrase" xml:space="preserve">
+    <value>Пароль/фраза:</value>
+  </data>
+  <data name="spd_msgXofYUnicodeChars" xml:space="preserve">
+    <value>{0} из {1} знаков Юникода</value>
+  </data>
+  <data name="spd_text_ReadMoreAbout" xml:space="preserve">
+    <value>Дополнительные сведения о</value>
+  </data>
+  <data name="spd_text_from256BitRD" xml:space="preserve">
+    <value>с 256-битным случайных данных</value>
+  </data>
+  <data name="spd_msgUseEmptyPassword" xml:space="preserve">
+    <value>Использовать пустой пароль?</value>
+  </data>
+  <data name="spd_msgPasswordEffectivelyEmpty" xml:space="preserve">
+    <value>Пароль пуст эффективно - вы уверены?</value>
+  </data>
+  <data name="spdm_Set_OK" xml:space="preserve">
+    <value>Установка пароля</value>
+  </data>
+  <data name="spdm_SetAndEncrypt_Title" xml:space="preserve">
+    <value>Зашифровать пароль набора &amp;</value>
+  </data>
+  <data name="spdm_SetAndEncrypt_OK" xml:space="preserve">
+    <value>Шифрование</value>
+  </data>
+  <data name="spdm_SetAndEncryptAndSave_Title" xml:space="preserve">
+    <value>Установка пароля, шифрования и сохранить</value>
+  </data>
+  <data name="spdm_SetAndEncryptAndSave_OK" xml:space="preserve">
+    <value>Зашифровать и сохранить</value>
+  </data>
+  <data name="spdm_SetAndDecrypt_Title" xml:space="preserve">
+    <value>Установить &amp;пароль расшифровки</value>
+  </data>
+  <data name="spdm_SetAndDecrypt_OK" xml:space="preserve">
+    <value>Расшифровка</value>
+  </data>
+  <data name="spdm_SetAndDecryptLoadedFile_Title" xml:space="preserve">
+    <value>Введите пароль для расшифровки загруженного файла</value>
+  </data>
+  <data name="spdm_SetAndDecryptLoadedFile_OK" xml:space="preserve">
+    <value>Расшифровать файл загрузки</value>
+  </data>
+  <data name="spdm_CorrectPassword_Title" xml:space="preserve">
+    <value>Текущий пароль неверны</value>
+  </data>
+  <data name="spdm_CorrectPassword_OK" xml:space="preserve">
+    <value>Изменение пароля и расшифровки</value>
+  </data>
+  <data name="spdm_Change_Title" xml:space="preserve">
+    <value>Смена пароля</value>
+  </data>
+  <data name="spdm_Change_OK" xml:space="preserve">
+    <value>Смена пароля</value>
+  </data>
+  <data name="termBinary" xml:space="preserve">
+    <value>Двоичный файл</value>
+  </data>
+  <data name="msgReplaceInvalidRegEx" xml:space="preserve">
+    <value>Недопустимое регулярное выражение синтаксиса</value>
+  </data>
+  <data name="msgFindCouldNotBeFound" xml:space="preserve">
+    <value>«{0}» не удается найти.</value>
+  </data>
+  <data name="termChangePassword" xml:space="preserve">
+    <value>Смена пароля</value>
+  </data>
+  <data name="termClear" xml:space="preserve">
+    <value>Очистить</value>
+  </data>
+  <data name="termReplaceAll" xml:space="preserve">
+    <value>Заменить все</value>
+  </data>
+  <data name="titleExportCleartext" xml:space="preserve">
+    <value>Экспорт открытого текста (кодировка: {0})</value>
+  </data>
+  <data name="titleImportWithEncoding" xml:space="preserve">
+    <value>Импорт с кодировкой: {0}</value>
+  </data>
+  <data name="termDefaults" xml:space="preserve">
+    <value>Значения по умолчанию</value>
+  </data>
+  <data name="sett_warn_neutral" xml:space="preserve">
+    <value>Этот параметр влияет на необходимые вычислительные операции для создания хэш-кода BCrypt. Большее значение означает больше работы.</value>
+  </data>
+  <data name="sett_warn_low" xml:space="preserve">
+    <value>Предупреждение: Низкое значение faciliates грубой силы и словарных атак.</value>
+  </data>
+  <data name="sett_warn_high" xml:space="preserve">
+    <value>Предупреждение: Высокое значение станет шифрования и расшифровки в очень длительной операцией.</value>
+  </data>
+  <data name="sett_text_ReadThe" xml:space="preserve">
+    <value>Чтение</value>
+  </data>
+  <data name="sett_text_orViewThe" xml:space="preserve">
+    <value>или просмотр</value>
+  </data>
+  <data name="sett_text_default_2_power" xml:space="preserve">
+    <value>По умолчанию: 2</value>
+  </data>
+  <data name="sett_text_EncrpytionMethod" xml:space="preserve">
+    <value>Метод шифрования</value>
+  </data>
+  <data name="sett_text_BCryptAESRounds" xml:space="preserve">
+    <value>Округляет число BCrypt/AES:</value>
+  </data>
+  <data name="sett_linktext_Spec" xml:space="preserve">
+    <value>Спецификации</value>
+  </data>
+  <data name="sett_linktext_Source" xml:space="preserve">
+    <value>исходный код</value>
+  </data>
+  <data name="sett_combo_VisualCrypt2" xml:space="preserve">
+    <value>VisualCrypt 2 (AES 256 бит, BCrypt - Multi)</value>
+  </data>
+  <data name="uriSourceUrl" xml:space="preserve">
+    <value>https://visualcrypt.com</value>
+  </data>
+  <data name="uriPWSpecUrl" xml:space="preserve">
+    <value>https://visualcrypt.com</value>
+  </data>
+  <data name="uriHelpUrl" xml:space="preserve">
+    <value>https://visualcrypt.com</value>
+  </data>
+  <data name="termSetPassword" xml:space="preserve">
+    <value>Установка пароля</value>
+  </data>
+  <data name="termSave" xml:space="preserve">
+    <value>Сохранить</value>
+  </data>
+  <data name="termPassword" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="termEncrypt" xml:space="preserve">
+    <value>Шифрование!</value>
+  </data>
+  <data name="termDecrypt" xml:space="preserve">
+    <value>Расшифровка</value>
+  </data>
+  <data name="termCopyToClipboard" xml:space="preserve">
+    <value>Копировать в буфер обмена</value>
+  </data>
+  <data name="termCancel" xml:space="preserve">
+    <value>Отмена</value>
+  </data>
+  <data name="plaintextStatusbarText" xml:space="preserve">
+    <value>Обычный текст | {0} | {1}</value>
+  </data>
+  <data name="plaintextStatusbarPositionInfo" xml:space="preserve">
+    <value>LN {0}, {1} Col | POS {2} / {3}</value>
+  </data>
+  <data name="operationEncryption" xml:space="preserve">
+    <value>Шифрование:</value>
+  </data>
+  <data name="operationEncryptAndSave" xml:space="preserve">
+    <value>При шифровании и сохранении:</value>
+  </data>
+  <data name="operationDecryptOpenedFile" xml:space="preserve">
+    <value>Расшифровка открываемый файл:</value>
+  </data>
+  <data name="operationDecryption" xml:space="preserve">
+    <value>Расшифровка:</value>
+  </data>
+  <data name="msgPasswordError" xml:space="preserve">
+    <value>Неверный пароль или сообщение повреждено подделан.</value>
+  </data>
+  <data name="miViewZoomOut" xml:space="preserve">
+    <value>Уменьшение масштаба</value>
+  </data>
+  <data name="miViewZoomLevelText" xml:space="preserve">
+    <value>Масштаб ({0} %)</value>
+  </data>
+  <data name="miViewZoomIn" xml:space="preserve">
+    <value>Увеличение</value>
+  </data>
+  <data name="miViewToolArea" xml:space="preserve">
+    <value>Область инструментов</value>
+  </data>
+  <data name="miViewStatusBar" xml:space="preserve">
+    <value>Строка состояния</value>
+  </data>
+  <data name="miViewLanguage" xml:space="preserve">
+    <value>Язык</value>
+  </data>
+  <data name="miView" xml:space="preserve">
+    <value>Просмотр</value>
+  </data>
+  <data name="miVCSettings" xml:space="preserve">
+    <value>Параметры...</value>
+  </data>
+  <data name="miVCSetPassword" xml:space="preserve">
+    <value>Установить пароль...</value>
+  </data>
+  <data name="miVCEncrypt" xml:space="preserve">
+    <value>Шифрование</value>
+  </data>
+  <data name="miVCDecrypt" xml:space="preserve">
+    <value>Расшифровка</value>
+  </data>
+  <data name="miVCChangePassword" xml:space="preserve">
+    <value>Изменить пароль...</value>
+  </data>
+  <data name="miVC" xml:space="preserve">
+    <value>VisualCrypt</value>
+  </data>
+  <data name="miHelpViewOnline" xml:space="preserve">
+    <value>Справка в Интернете</value>
+  </data>
+  <data name="miHelpLog" xml:space="preserve">
+    <value>Ведение журнала...</value>
+  </data>
+  <data name="miHelpAbout" xml:space="preserve">
+    <value>О VisualCrypt...</value>
+  </data>
+  <data name="miHelp" xml:space="preserve">
+    <value>Справка</value>
+  </data>
+  <data name="miFormatWordWrap" xml:space="preserve">
+    <value>По словам</value>
+  </data>
+  <data name="miFormatFont" xml:space="preserve">
+    <value>Шрифт...</value>
+  </data>
+  <data name="miFormatCheckSpelling" xml:space="preserve">
+    <value>Проверка орфографии</value>
+  </data>
+  <data name="miFormat" xml:space="preserve">
+    <value>Формат</value>
+  </data>
+  <data name="miFileSaveAs" xml:space="preserve">
+    <value>Сохранить как...</value>
+  </data>
+  <data name="miFileSave" xml:space="preserve">
+    <value>Сохранить</value>
+  </data>
+  <data name="miFilePrint" xml:space="preserve">
+    <value>Печать...</value>
+  </data>
+  <data name="miFileOpen" xml:space="preserve">
+    <value>Открыть...</value>
+  </data>
+  <data name="miFileNew" xml:space="preserve">
+    <value>Новый</value>
+  </data>
+  <data name="miFileImportWithEnconding" xml:space="preserve">
+    <value>Импорт с кодировкой...</value>
+  </data>
+  <data name="miFileExportClearText" xml:space="preserve">
+    <value>Экспортируйте открытый текст...</value>
+  </data>
+  <data name="miFileExit" xml:space="preserve">
+    <value>Выход</value>
+  </data>
+  <data name="miFile" xml:space="preserve">
+    <value>Файл</value>
+  </data>
+  <data name="miEditUndo" xml:space="preserve">
+    <value>Отменить</value>
+  </data>
+  <data name="miEditSelectAll" xml:space="preserve">
+    <value>Выбрать все</value>
+  </data>
+  <data name="miEditReplace" xml:space="preserve">
+    <value>Замените...</value>
+  </data>
+  <data name="miEditRedo" xml:space="preserve">
+    <value>Повтор</value>
+  </data>
+  <data name="miEditPaste" xml:space="preserve">
+    <value>Вставить</value>
+  </data>
+  <data name="miEditInsertDateTime" xml:space="preserve">
+    <value>Вставить дату, время</value>
+  </data>
+  <data name="miEditGoTo" xml:space="preserve">
+    <value>Перейти к...</value>
+  </data>
+  <data name="miEditFindPrevious" xml:space="preserve">
+    <value>Найти ранее</value>
+  </data>
+  <data name="miEditFindNext" xml:space="preserve">
+    <value>Найти далее</value>
+  </data>
+  <data name="miEditFind" xml:space="preserve">
+    <value>Найти...</value>
+  </data>
+  <data name="miEditDeleteLine" xml:space="preserve">
+    <value>Удалить строку</value>
+  </data>
+  <data name="miEditCut" xml:space="preserve">
+    <value>Вырезать</value>
+  </data>
+  <data name="miEditCopy" xml:space="preserve">
+    <value>Копировать</value>
+  </data>
+  <data name="miEdit" xml:space="preserve">
+    <value>Изменить</value>
+  </data>
 </root>
